--- a/css/presentation.css
+++ b/css/presentation.css
@@ -15,3 +15,29 @@
 .reveal h1 {
   font-size: 2em ;
 }
+
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  text-transform: none;
+  }
+
+.reveal .footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  padding: 1em;
+  font-size: 0.5em;
+  width:100%;
+  color: gray;
+}
+.reveal .footer img {
+  height: 1em;
+}
+
+.reveal.overview .footer {
+  display: none;
+}
